--- a/Hyakuninisshu/Base.lproj/Main.storyboard
+++ b/Hyakuninisshu/Base.lproj/Main.storyboard
@@ -627,13 +627,102 @@
                     <view key="view" contentMode="scaleToFill" id="qo4-5v-ZXu">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B77-Sl-VDO" userLabel="ScoreView">
+                                <rect key="frame" x="64" y="108" width="286" height="68"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="正解数" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KTr-95-p0K" userLabel="ScoreTitle">
+                                        <rect key="frame" x="8" y="8" width="270" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 / 10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fai-gn-68b" userLabel="Score">
+                                        <rect key="frame" x="8" y="33" width="270" height="27"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="fai-gn-68b" secondAttribute="bottom" constant="8" id="Ne6-0C-f9o"/>
+                                    <constraint firstItem="KTr-95-p0K" firstAttribute="leading" secondItem="B77-Sl-VDO" secondAttribute="leading" constant="8" id="PWV-qA-ith"/>
+                                    <constraint firstItem="fai-gn-68b" firstAttribute="top" secondItem="KTr-95-p0K" secondAttribute="bottom" constant="8" id="VkR-vD-N7n"/>
+                                    <constraint firstAttribute="trailing" secondItem="KTr-95-p0K" secondAttribute="trailing" constant="8" id="efC-Uv-m35"/>
+                                    <constraint firstItem="KTr-95-p0K" firstAttribute="top" secondItem="B77-Sl-VDO" secondAttribute="top" constant="8" id="mKb-OG-pSd"/>
+                                    <constraint firstAttribute="trailing" secondItem="fai-gn-68b" secondAttribute="trailing" constant="8" id="njO-94-WfW"/>
+                                    <constraint firstItem="fai-gn-68b" firstAttribute="leading" secondItem="B77-Sl-VDO" secondAttribute="leading" constant="8" id="w1I-JW-6XJ"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Hy-fA-Txo" userLabel="AverageAnswerTimeView">
+                                <rect key="frame" x="64" y="192" width="286" height="68"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="平均回答時間" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4GS-jQ-Oqc" userLabel="AverageAnswerTimeTitle">
+                                        <rect key="frame" x="8" y="8" width="270" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.45秒" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SsC-oy-k0P" userLabel="AverageAnswerTime">
+                                        <rect key="frame" x="8" y="33" width="270" height="27"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                <constraints>
+                                    <constraint firstItem="SsC-oy-k0P" firstAttribute="top" secondItem="4GS-jQ-Oqc" secondAttribute="bottom" constant="8" id="4gM-5P-OyR"/>
+                                    <constraint firstItem="4GS-jQ-Oqc" firstAttribute="top" secondItem="4Hy-fA-Txo" secondAttribute="top" constant="8" id="7bD-Lq-3Vy"/>
+                                    <constraint firstItem="4GS-jQ-Oqc" firstAttribute="leading" secondItem="4Hy-fA-Txo" secondAttribute="leading" constant="8" id="BQA-6m-yjL"/>
+                                    <constraint firstAttribute="bottom" secondItem="SsC-oy-k0P" secondAttribute="bottom" constant="8" id="QfP-C2-ELB"/>
+                                    <constraint firstAttribute="trailing" secondItem="SsC-oy-k0P" secondAttribute="trailing" constant="8" id="YFE-Yg-D6D"/>
+                                    <constraint firstItem="SsC-oy-k0P" firstAttribute="leading" secondItem="4Hy-fA-Txo" secondAttribute="leading" constant="8" id="cDG-O1-uGT"/>
+                                    <constraint firstAttribute="trailing" secondItem="4GS-jQ-Oqc" secondAttribute="trailing" constant="8" id="uih-oi-nPI"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pGI-58-Oid" userLabel="GoToTrainingButton">
+                                <rect key="frame" x="111.5" y="324" width="191" height="33"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="間違えた歌の練習をする"/>
+                                <connections>
+                                    <action selector="didTapGoToTraining:" destination="eOc-UN-KB8" eventType="touchUpInside" id="xtp-qe-6XH"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hiw-ng-R1A" userLabel="GoToMenuButton">
+                                <rect key="frame" x="146" y="389" width="122" height="33"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="メニューに戻る"/>
+                                <connections>
+                                    <action selector="didTapGoToMenu:" destination="eOc-UN-KB8" eventType="touchUpInside" id="8qG-c0-pwi"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="J28-k0-6Lm"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="4Hy-fA-Txo" firstAttribute="leading" secondItem="J28-k0-6Lm" secondAttribute="leading" constant="64" id="AHp-CF-EnT"/>
+                            <constraint firstItem="pGI-58-Oid" firstAttribute="centerX" secondItem="qo4-5v-ZXu" secondAttribute="centerX" id="TLM-14-M98"/>
+                            <constraint firstItem="B77-Sl-VDO" firstAttribute="leading" secondItem="J28-k0-6Lm" secondAttribute="leading" constant="64" id="WE2-0f-nuo"/>
+                            <constraint firstItem="J28-k0-6Lm" firstAttribute="trailing" secondItem="4Hy-fA-Txo" secondAttribute="trailing" constant="64" id="XPD-1y-FpA"/>
+                            <constraint firstItem="4Hy-fA-Txo" firstAttribute="top" secondItem="B77-Sl-VDO" secondAttribute="bottom" constant="16" id="cqk-v0-o1T"/>
+                            <constraint firstItem="hiw-ng-R1A" firstAttribute="top" secondItem="pGI-58-Oid" secondAttribute="bottom" constant="32" id="dzP-E6-2pO"/>
+                            <constraint firstItem="B77-Sl-VDO" firstAttribute="top" secondItem="J28-k0-6Lm" secondAttribute="top" constant="64" id="g0I-Gc-JXw"/>
+                            <constraint firstItem="pGI-58-Oid" firstAttribute="top" secondItem="4Hy-fA-Txo" secondAttribute="bottom" constant="64" id="izG-4f-JMa"/>
+                            <constraint firstItem="J28-k0-6Lm" firstAttribute="trailing" secondItem="B77-Sl-VDO" secondAttribute="trailing" constant="64" id="nTq-UE-n7P"/>
+                            <constraint firstItem="hiw-ng-R1A" firstAttribute="centerX" secondItem="qo4-5v-ZXu" secondAttribute="centerX" id="rqW-cn-202"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="averageAnswerTimeLabel" destination="SsC-oy-k0P" id="Lde-Cj-JoM"/>
+                        <outlet property="goToTrainingButton" destination="pGI-58-Oid" id="Rib-Qe-dQq"/>
+                        <outlet property="scoreLabel" destination="fai-gn-68b" id="ppV-4d-aMB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w90-vv-yP3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7029" y="-265"/>
+            <point key="canvasLocation" x="7028.985507246377" y="-265.17857142857144"/>
         </scene>
         <!--Question View Controller-->
         <scene sceneID="a2M-F2-tZe">
@@ -859,6 +948,9 @@
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGrayColor">
             <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
